--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             let text = prompt("Input your task:", "make the homework");
             if (text != null && text != "") {
                 let d = new Date();
-                taskObject = {
+                let taskObject = {
                     taskText: `${text}`,
                     date: `${d.toLocaleDateString(
                         "en-GB"
